added in aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Favorite Things</title>
 </head>
 
 <body>
-    <p>This is a site About me</p>
+    <h1>My Favorite Things</h1>
+    <hr>
+    <p>My name is (first name only). This Web Page lists my favorite foods, movies, and music.</p>
 </body>
 
 </html>
