added in aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -11,6 +11,13 @@
     <h1>My Favorite Things</h1>
     <hr>
     <p>My name is (first name only). This Web Page lists my favorite foods, movies, and music.</p>
+
+    <h2>My Favorite Foods</h2>
+    <p>below is a list of 3 of my favourite foods. I've chosen them based on personal preference.</p>
+    <ol>
+        <li>The first is <i>Pilau rice</i> which is an East African dish</li>
+        <li>The second is <i>Macaroni and cheese</i></li>
+    </ol>
 </body>
 
 </html>
