added in aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -15,8 +15,11 @@
     <h2>My Favorite Foods</h2>
     <p>below is a list of 3 of my favourite foods. I've chosen them based on personal preference.</p>
     <ol>
-        <li>The first is <i>Pilau rice</i> which is an East African dish</li>
-        <li>The second is <i>Macaroni and cheese</i></li>
+        <li>The first is <i>Pilau rice</i> which is an East African dish. I love the blend of masala and lovely scented
+            spices, used in it's preparation.</li>
+        <li>The second is <i>Macaroni and cheese</i>, which is found in almost every part of the world</li>
+        <li>The third is <i>risotto</i>. I had it once in venice, and i had to learn its recipe. i've been preparing it
+            since then</li>
     </ol>
 </body>
 
