added in aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -16,10 +16,17 @@
     <p>below is a list of 3 of my favourite foods. I've chosen them based on personal preference.</p>
     <ol>
         <li>The first is <i>Pilau rice</i> which is an East African dish. I love the blend of masala and lovely scented
-            spices, used in it's preparation.</li>
+            spices, used in it's preparation.</li>cccb n
         <li>The second is <i>Macaroni and cheese</i>, which is found in almost every part of the world</li>
         <li>The third is <i>risotto</i>. I had it once in venice, and i had to learn its recipe. i've been preparing it
             since then</li>
+    </ol>
+
+    <h2>My Favourite Music</h2>
+    <p>My range of music transcends different genres. For the purpose of this, I'll pick one each from 3 different
+        genres.</p>
+    <ol>
+        <li>From the afro-beats genre, I'll pick my first which is <h3>Champion (feat. D-Smoke)</h3> by Fireboy DML</li>
     </ol>
 </body>
 
