added in aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -27,6 +27,7 @@
         genres.</p>
     <ol>
         <li>From the afro-beats genre, I'll pick my first which is <h3>Champion (feat. D-Smoke)</h3> by Fireboy DML</li>
+        <li>From the Pop genre, I'll pick my second which is <h3>You don't have to call</h3> Usher Raymond</li>
     </ol>
 </body>
 
