--- a/aboutMe.html
+++ b/aboutMe.html
@@ -27,7 +27,8 @@
         genres.</p>
     <ol>
         <li>From the afro-beats genre, I'll pick my first which is <h3>Champion (feat. D-Smoke)</h3> by Fireboy DML</li>
-        <li>From the Pop genre, I'll pick my second which is <h3>You don't have to call</h3> Usher Raymond</li>
+        <li>From the Pop genre, I'll pick my second which is <h3>You don't have to call</h3> by Usher Raymond</li>
+        <li>From the R&B genre, I'll pick my third which is <h3>Always Be My Baby</h3> by Mariah Carey</li>
     </ol>
 </body>
 
