added in aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -30,6 +30,9 @@
         <li>From the Pop genre, I'll pick my second which is <h3>You don't have to call</h3> by Usher Raymond</li>
         <li>From the R&B genre, I'll pick my third which is <h3>Always Be My Baby</h3> by Mariah Carey</li>
     </ol>
+
+    <h2>My Favourite Movies</h2>
+    <hr>
 </body>
 
 </html>
