added in aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -10,7 +10,7 @@
 <body>
     <h1>My Favorite Things</h1>
     <hr>
-    <p>My name is (first name only). This Web Page lists my favorite foods, movies, and music.</p>
+    <p>My name is Siegfred. This Web Page lists my favorite foods, movies, and music.</p>
 
     <h2>My Favorite Foods</h2>
     <p>below is a list of 3 of my favourite foods. I've chosen them based on personal preference.</p>
@@ -18,7 +18,7 @@
         <li>The first is <i>Pilau rice</i> which is an East African dish. I love the blend of masala and lovely scented
             spices, used in it's preparation.</li>cccb n
         <li>The second is <i>Macaroni and cheese</i>, which is found in almost every part of the world</li>
-        <li>The third is <i>risotto</i>. I had it once in venice, and i had to learn its recipe. i've been preparing it
+        <li>The third is <i>Risotto</i>. I had it once in venice, and i had to learn its recipe. i've been preparing it
             since then</li>
     </ol>
 
@@ -47,6 +47,16 @@
             </td>
         </tr>
     </table>
+    <p>This is a list of my favoritemovies</p>
+    <ol>
+        <li><b>The Matrix</b> makes top of my list. My attraction to this movie is due to the binary reality of two
+            worlds and the extensive graphics used in it's production. Before it, the world had never seen anything like
+            it</li>
+        <li><b>The Curious Case of Benjamin Burton</b> is another interesting movie. I like it's inverted reality of
+            nature where the protagonist ages backward from birth</li>
+        <li><b>Cinderella Man</b> is third of my pick. A story of grit, determination, focus, desire and motivation. I
+            like this movie because it encourages belief in oneself</li>
+    </ol>
 
 </body>
 
