added in aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -16,7 +16,7 @@
     <p>below is a list of 3 of my favourite foods. I've chosen them based on personal preference.</p>
     <ol>
         <li>The first is <i>Pilau rice</i> which is an East African dish. I love the blend of masala and lovely scented
-            spices, used in it's preparation.</li>cccb n
+            spices, used in it's preparation.</li>
         <li>The second is <i>Macaroni and cheese</i>, which is found in almost every part of the world</li>
         <li>The third is <i>Risotto</i>. I had it once in venice, and i had to learn its recipe. i've been preparing it
             since then</li>
@@ -27,8 +27,13 @@
         genres.</p>
     <ol>
         <li>From the afro-beats genre, I'll pick my first which is <h3>Champion (feat. D-Smoke)</h3> by Fireboy DML</li>
+        <br>
+
         <li>From the Pop genre, I'll pick my second which is <h3>You don't have to call</h3> by Usher Raymond</li>
+        <br>
+
         <li>From the R&B genre, I'll pick my third which is <h3>Always Be My Baby</h3> by Mariah Carey</li>
+        <br>
     </ol>
 
     <h2>My Favourite Movies</h2>
@@ -39,7 +44,7 @@
                     alt="">
             </td>
             <td>
-                <img src="https://images-na.ssl-images-amazon.com/images/I/51Dm1ZKZphL._SY445_.jpg" alt="">
+                <img src="https://images-na.ssl-images-amazon.com/images/I/51FTvKcnemL._AC_SY400_.jpg" alt="">
             </td>
             <td>
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTW2_KNDUiHANI-ZtbhKyp0fDsMrg74MIZSGw&usqp=CAU"
@@ -47,7 +52,7 @@
             </td>
         </tr>
     </table>
-    <p>This is a list of my favoritemovies</p>
+    <p>This is a list of my favorite movies</p>
     <ol>
         <li><b>The Matrix</b> makes top of my list. My attraction to this movie is due to the binary reality of two
             worlds and the extensive graphics used in it's production. Before it, the world had never seen anything like
