added in semanticPdf.html

--- a/semanticPdf.html
+++ b/semanticPdf.html
@@ -8,42 +8,79 @@
 </head>
 
 <body>
-    <b align="center">WEDNESDAY</b>
-    <br>
+    <header>
+        <b>WEDNESDAY</b>
+        <br>
 
-    <table>
-        <tr>
-            <td>
-                <h5>Sunny, Warm</h5>
-                <h5>High 86, low 53</h5>
-                <h6>Compete weather 19</h6>
-            </td>
-            <td>
-                <h1>THE DENVER POST</h1>
-                <hr>
-            </td>
-            <td>
-                <h5>The Denver Post Online</h5>
-                <h6><a href="denverpost.com">denverpost.com</a></h6>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <h6>September 12, 2001</h6>
-            </td>
-            <td>
-                <i>Voice ofthe Rocky Mountain Empire</i>
-            </td>
-            <td>
-                <small><b>**504</b>-My Very own Meeting Outpost</small>
-            </td>
-        </tr>
-    </table>
-    <hr>
+        <table>
+            <tr>
+                <td>
+                    <h5>Sunny, Warm</h5>
+                    <h5>High 86, low 53</h5>
+                    <h6>Compete weather 19</h6>
+                </td>
+                <td>
+                    <h1>THE DENVER POST</h1>
+                    <hr>
+                </td>
+                <td>
+                    <h5>The Denver Post Online</h5>
+                    <h6><a href="denverpost.com">denverpost.com</a></h6>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h6>September 12, 2001</h6>
+                </td>
+                <td>
+                    <i>Voice ofthe Rocky Mountain Empire</i>
+                </td>
+                <td>
+                    <small><b>**504</b>-My Very own Meeting Outpost</small>
+                </td>
+            </tr>
+        </table>
+        <hr>
+    </header>
 
-    <h2>ATTACK ON AMERICA</h2>
-    <h1>Darkest hour</h1>
+    <main>
+        <h3>ATTACK ON AMERICA</h3>
+        <h1>Darkest hour</h1>
+        <h3>Thousands die as hijacked jets strike World Trade Center, Pentagon; Bush promises retribution for terrorists
+            <q>and those who habour them</q></h3>
 
+        <section>
+            <table>
+                <tr>
+                    <td>
+                        <figure>
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQVohh1SmucsQTfQpUMUlG4WSOAqtEMpqXMtA&usqp=CAU"
+                                alt="">
+                            <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid voluptatum
+                                facilis eius eligendi praesentium perferendis nisi commodi atque, explicabo adipisci
+                                assumenda officia consequatur provident nostrum ea? Earum dolorum harum, dolores ipsum
+                                eos, quis, vel fugit aliquid voluptate iste odit molestias.</figcaption>
+                        </figure>
+                    </td>
+                    <td>
+                        <figure>
+                            <img src="https://ca-times.brightspotcdn.com/dims4/default/1bb97a0/2147483647/strip/true/crop/2000x1347+0+0/resize/840x566!/quality/90/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Fe9%2F35%2F6619d9e68029a96770861b314e3e%2Fla-na-wtc-9112001"
+                                alt="">
+                        </figure>
+
+                    </td>
+                    <td>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae ipsa aliquid id impedit illo
+                        laborum exercitationem itaque, optio, vero adipisci numquam? Asperiores fuga saepe harum ipsa
+                        delectus debitis nostrum in recusandae, aperiam, excepturi ipsum? Omnis impedit doloremque
+                        velit, dolore asperiores ea, officiis quaerat, illum aperiam blanditiis tenetur iste aliquid
+                        consectetur.
+                    </td>
+                </tr>
+            </table>
+        </section>
+
+    </main>
 </body>
 
 </html>
