added to semanticPdf.html

--- a/semanticPdf.html
+++ b/semanticPdf.html
@@ -56,25 +56,35 @@
                         <figure>
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQVohh1SmucsQTfQpUMUlG4WSOAqtEMpqXMtA&usqp=CAU"
                                 alt="">
-                            <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid voluptatum
-                                facilis eius eligendi praesentium perferendis nisi commodi atque, explicabo adipisci
-                                assumenda officia consequatur provident nostrum ea? Earum dolorum harum, dolores ipsum
-                                eos, quis, vel fugit aliquid voluptate iste odit molestias.</figcaption>
+                            <figcaption>
+                                <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, non.</b>
+
+                            </figcaption>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi, ipsum!</p>
+                            <b>President Bush</b>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eveniet quia illum odio
+                                explicabo
+                                dolorem iste fugit tenetur quisquam totam.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing goloum bavor.</p>
                         </figure>
+
                     </td>
                     <td>
                         <figure>
                             <img src="https://ca-times.brightspotcdn.com/dims4/default/1bb97a0/2147483647/strip/true/crop/2000x1347+0+0/resize/840x566!/quality/90/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Fe9%2F35%2F6619d9e68029a96770861b314e3e%2Fla-na-wtc-9112001"
                                 alt="">
+                            <small>photo taken by <b>Lance Tonywood</b></small>
                         </figure>
 
                     </td>
                     <td>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae ipsa aliquid id impedit illo
-                        laborum exercitationem itaque, optio, vero adipisci numquam? Asperiores fuga saepe harum ipsa
-                        delectus debitis nostrum in recusandae, aperiam, excepturi ipsum? Omnis impedit doloremque
-                        velit, dolore asperiores ea, officiis quaerat, illum aperiam blanditiis tenetur iste aliquid
-                        consectetur.
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, harum?</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima optio incidunt quod
+                            veritatis ad.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+
+                        <hr>
+                        <small>see <b>ATTACK</b> on 23</small>
                     </td>
                 </tr>
             </table>
