added to semanticPdf.html

--- a/semanticPdf.html
+++ b/semanticPdf.html
@@ -90,6 +90,60 @@
             </table>
         </section>
 
+        <section>
+            <table>
+                <tr>
+                    <td>
+                        <img height="450" width="350"
+                            src="https://i.pinimg.com/236x/ad/15/7b/ad157bd3633c6bdda187bd1d4ca7b365--world-trade-center-september-.jpg"
+                            alt="">
+                    </td>
+                    <td>
+                        <h4>Pilot in <abbr title="Public/Passenger Announcement Flight, Airway, Technology">Pa</abbr>.
+                            crash a Jetflice resident
+                        </h4><i>Page 11A</i>
+                        <hr>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, quibusdam!</p>
+
+                        <h4>Gas Prices surge: markets reel
+                        </h4><i>Page 10</i>
+                        <hr>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut sapiente non magnam quos
+                            blanditiis?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse molestias, voluptate natus
+                            dolorem quia, hic eveniet qui nesciunt corrupti magnam beatae sapiente. Voluptates
+                            laudantium aperiam quis assumenda.</p>
+
+                        <h4>United we stand</h4>
+                        <hr>
+                    </td>
+                    <td>
+                        <i>Lorem, ipsum dolor.</i>
+                        <h4>With rest of the nation, Celgrade Wallis
+                        </h4><i>Page 13A</i>
+                        <hr>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores iusto ea cum vero vel
+                            consequuntur.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est totam voluptatum quod architecto
+                            aut odit ratione! Iusto impedit aliquid molestias blanditiis enim molestiae beatae aliquam.
+                        </p>
+
+                        <h4>Travellers face chaotic week
+                        </h4>
+                        <hr>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur incidunt nostrum alias
+                            voluptatibus nemo, nihil dolore reiciendis laudantium delectus recusandae animi laborum.</p>
+                    </td>
+                    <td>
+                        <img width="400" height="440"
+                            src="https://cdn.britannica.com/50/70150-050-F587E822/routes-planes-terrorist-attacks-September-11-2001.jpg"
+                            alt="">
+                        <b>For more on how it happened, see Page 54</b>
+                    </td>
+                </tr>
+            </table>
+        </section>
+
     </main>
 </body>
 
