added in forms.html

--- a/forms.html
+++ b/forms.html
@@ -8,7 +8,37 @@
 </head>
 
 <body>
+    <!-- headers -->
+    <h1>Memberhip Application</h1>
+    <h3>To Apply for membership, please complete all questions.</h3>
 
+    <hr>
+
+    <!-- main form -->
+    <form action="">
+        <table>
+            <tr>
+                <td>
+                    <label for="name"><b>Name</b></label>
+                </td>
+                <td>
+                    <input id="name" type="text" placeholder="First Name">
+                </td>
+                <td>
+                    <input type="text" placeholder="Last Name">
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <label for="address"><b>Address</b></label>
+                </td>
+                <td colspan="2">
+                    <input type="text" id="address" size="48">
+                </td>
+            </tr>
+        </table>
+    </form>
 </body>
 
 </html>
