added in forms.html

--- a/forms.html
+++ b/forms.html
@@ -34,9 +34,43 @@
                     <label for="address"><b>Address</b></label>
                 </td>
                 <td colspan="2">
-                    <input type="text" id="address" size="48">
+                    <input type="text" id="address" size="48" placeholder="Street Address">
                 </td>
             </tr>
+
+            <tr>
+                <td></td>
+                <td colspan="2">
+                    <input type="text" id="address" size="48" placeholder="Street Address Line 2">
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td>
+                    <input type="text" placeholder="City">
+                </td>
+                <td>
+                    <input type="text" placeholder="State/Province">
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td>
+                    <input type="number" placeholder="Postal/Zip Code">
+                </td>
+                <td>
+                    <select>
+                        <option value="0">Please Select</option>
+                        <option value="1">Canada</option>
+                        <option value="2">Nigeria</option>
+                        <option value="3">United States</option>
+                    </select>
+                </td>
+            </tr>
+
+
         </table>
     </form>
 </body>
