added in forms.html

--- a/forms.html
+++ b/forms.html
@@ -70,7 +70,14 @@
                 </td>
             </tr>
 
-
+            <tr>
+                <td>
+                    <label for="email"><b>E-mail</b></label>
+                </td>
+                <td colspan="2">
+                    <input type="email" id="email" size="30" placeholder="ex: myname@example.com">
+                </td>
+            </tr>
         </table>
     </form>
 </body>
