--- a/forms.html
+++ b/forms.html
@@ -16,69 +16,92 @@
 
     <!-- main form -->
     <form action="">
-        <table>
-            <tr>
-                <td>
-                    <label for="name"><b>Name</b></label>
-                </td>
-                <td>
-                    <input id="name" type="text" placeholder="First Name">
-                </td>
-                <td>
-                    <input type="text" placeholder="Last Name">
-                </td>
-            </tr>
+        <fieldset>
+            <legend>
+                <h3>Personal Details</h3>
+            </legend>
+            <table>
+                <tr>
+                    <td>
+                        <label for="name"><b>Name</b></label>
+                    </td>
+                    <td>
+                        <input id="name" type="text" placeholder="First Name">
+                    </td>
+                    <td>
+                        <input type="text" placeholder="Last Name">
+                    </td>
+                </tr>
 
-            <tr>
-                <td>
-                    <label for="address"><b>Address</b></label>
-                </td>
-                <td colspan="2">
-                    <input type="text" id="address" size="48" placeholder="Street Address">
-                </td>
-            </tr>
+            </table>
+        </fieldset>
+        <br>
 
-            <tr>
-                <td></td>
-                <td colspan="2">
-                    <input type="text" id="address" size="48" placeholder="Street Address Line 2">
-                </td>
-            </tr>
+        <fieldset>
+            <legend>
+                <h3>Location</h3>
+            </legend>
+            <table>
+                <tr>
+                    <td>
+                        <label for="address"><b>Address</b></label>
+                    </td>
+                    <td colspan="2">
+                        <input type="text" id="address" size="48" placeholder="Street Address">
+                    </td>
+                </tr>
 
-            <tr>
-                <td></td>
-                <td>
-                    <input type="text" placeholder="City">
-                </td>
-                <td>
-                    <input type="text" placeholder="State/Province">
-                </td>
-            </tr>
+                <tr>
+                    <td></td>
+                    <td colspan="2">
+                        <input type="text" id="address" size="48" placeholder="Street Address Line 2">
+                    </td>
+                </tr>
 
-            <tr>
-                <td></td>
-                <td>
-                    <input type="number" placeholder="Postal/Zip Code">
-                </td>
-                <td>
-                    <select>
-                        <option value="0">Please Select</option>
-                        <option value="1">Canada</option>
-                        <option value="2">Nigeria</option>
-                        <option value="3">United States</option>
-                    </select>
-                </td>
-            </tr>
+                <tr>
+                    <td></td>
+                    <td>
+                        <input type="text" placeholder="City">
+                    </td>
+                    <td>
+                        <input type="text" placeholder="State/Province">
+                    </td>
+                </tr>
 
-            <tr>
-                <td>
-                    <label for="email"><b>E-mail</b></label>
-                </td>
-                <td colspan="2">
-                    <input type="email" id="email" size="30" placeholder="ex: myname@example.com">
-                </td>
-            </tr>
-        </table>
+                <tr>
+                    <td></td>
+                    <td>
+                        <input type="number" placeholder="Postal/Zip Code">
+                    </td>
+                    <td>
+                        <select>
+                            <option value="0">Please Select</option>
+                            <option value="1">Canada</option>
+                            <option value="2">Nigeria</option>
+                            <option value="3">United States</option>
+                        </select>
+                    </td>
+                </tr>
+
+            </table>
+        </fieldset>
+        <br>
+
+        <fieldset>
+            <legend>
+                <h3>Contact Details</h3>
+            </legend>
+            <table>
+                <tr>
+                    <td>
+                        <label for="email"><b>E-mail</b></label>
+                    </td>
+                    <td colspan="2">
+                        <input type="email" id="email" size="30" placeholder="ex: myname@example.com">
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
     </form>
 </body>
 
