added in forms.html

--- a/forms.html
+++ b/forms.html
@@ -100,6 +100,46 @@
                         <input type="email" id="email" size="30" placeholder="ex: myname@example.com">
                     </td>
                 </tr>
+
+                <tr>
+                    <td>
+                        <label for="area-code"><b>Home Number</b></label>
+                    </td>
+                    <td>
+                        <input type="text" name="" id="area-code" placeholder="Area Code" size="5">
+                        - <input type="number" placeholder="Phone Number" size="13">
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <label for="areaCode"><b>Cellular Number</b></label>
+                    </td>
+                    <td>
+                        <input type="text" name="" id="areaCode" placeholder="Area Code" size="5">
+                        - <input type="number" placeholder="Phone Number" size="13">
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <label for="work"><b>Work Number</b></label>
+                    </td>
+                    <td>
+                        <input type="text" name="" id="work" placeholder="Area Code" size="5">
+                        - <input type="number" placeholder="Phone Number" size="13">
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <label for="website"><b>Website</b></label>
+                    </td>
+                    <td>
+                        <input type="text" name="" id="website" placeholder="Website" size="35">
+
+                    </td>
+                </tr>
             </table>
         </fieldset>
     </form>
