added in forms.html

--- a/forms.html
+++ b/forms.html
@@ -126,7 +126,7 @@
                         <label for="work"><b>Work Number</b></label>
                     </td>
                     <td>
-                        <input type="text" name="" id="work" placeholder="Area Code" size="5">
+                        <input type="text" id="work" placeholder="Area Code" size="5">
                         - <input type="number" placeholder="Phone Number" size="13">
                     </td>
                 </tr>
@@ -136,12 +136,16 @@
                         <label for="website"><b>Website</b></label>
                     </td>
                     <td>
-                        <input type="text" name="" id="website" placeholder="Website" size="35">
-
+                        <input type="text" id="website" placeholder="Website" size="35">
                     </td>
                 </tr>
             </table>
         </fieldset>
+        <br>
+
+        <label for="signature"><b>Signature</b></label>
+        <br>
+        <textarea id="signature" cols="50" rows="15"></textarea>
     </form>
 </body>
 
