--- a/forms.html
+++ b/forms.html
@@ -9,7 +9,7 @@
 
 <body>
     <!-- headers -->
-    <h1>Memberhip Application</h1>
+    <h1>Membership Application</h1>
     <h3>To Apply for membership, please complete all questions.</h3>
 
     <hr>
