styles added to aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -14,20 +14,42 @@
         h1 {
             font-size: 5em;
             text-align: center;
-            padding: 0;
+            padding: 0.2em;
             margin: 0;
-            box-shadow: 0 0 10px black;
+            box-shadow: 0 0 0.1em black;
             font-family: Comic Sans MS, sans-serif;
+            border-radius: 0.2em;
+            color: darksalmon;
+            text-shadow: 0 0 0.1em black;
         }
 
-        table {
-            align-items: center;
+        h2 {
+            color: brown;
+            background-color: rgb(33, 243, 243);
+            padding: 0.4em;
+            border-left: 0.2em solid rgb(1, 17, 17);
+            font-family: cursive;
+        }
 
+        h3,
+        b {
+            color: darkgreen;
+        }
+
+        p,
+        ol {
+            font-size: 1.2em;
+            font-family: cursive;
+        }
+
+        i {
+            color: teal;
         }
 
         img {
             width: 20em;
             margin: 2em;
+            box-shadow: 0 0 2em black;
 
         }
     </style>
@@ -39,7 +61,7 @@
     <p>My name is Siegfred. This Web Page lists my favorite foods, movies, and music.</p>
 
     <h2>My Favorite Foods</h2>
-    <p>below is a list of 3 of my favourite foods. I've chosen them based on personal preference.</p>
+    <p>Below is a list of 3 of my favourite foods. I've chosen them based on personal preference.</p>
     <ol>
         <li>The first is <i>Pilau rice</i> which is an East African dish. I love the blend of masala and lovely scented
             spices, used in it's preparation.</li>
