styles added to aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -29,6 +29,7 @@
             padding: 0.4em;
             border-left: 0.2em solid rgb(1, 17, 17);
             font-family: cursive;
+            text-align: center;
         }
 
         h3,
@@ -41,6 +42,8 @@
             font-size: 1.2em;
             font-family: cursive;
         }
+
+        table {}
 
         i {
             color: teal;
