--- a/aboutMe.html
+++ b/aboutMe.html
@@ -53,7 +53,13 @@
             width: 20em;
             margin: 2em;
             box-shadow: 0 0 2em black;
+            transition: 0.2s;
+        }
 
+        img:hover {
+            width: 21em;
+            box-shadow: 0 0 5em black;
+            transition: 0.2s;
         }
     </style>
 </head>
