styles added to aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -43,7 +43,9 @@
             font-family: cursive;
         }
 
-        table {}
+        table {
+            width: 100%;
+        }
 
         i {
             color: teal;
