--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 <body>
     <div id="header">
         <h1>SIEGFRED SAMSON</h1>
-        <small>Software Engineer</small>
+        <small><i>Software Engineer</i></small>
     </div>
 
     <div id="container">
