added to forms.html

--- a/forms.html
+++ b/forms.html
@@ -148,6 +148,16 @@
             <label for="signature"><b>Signature</b></label>
             <br>
             <textarea id="signature" cols="50" rows="15"></textarea>
+
+            <fieldset>
+                <legend>Confirmation</legend>
+                <div>
+                    <label for="checkbox"><input id="checkbox" type="checkbox">I can confirm that all details submitted
+                        are
+                        accurate</label>
+                    <input id="submit" type="submit" value="Submit">
+                </div>
+            </fieldset>
         </form>
     </div>
 </body>
