added to emoji.css

--- a/gridEmoji.html
+++ b/gridEmoji.html
@@ -6,7 +6,7 @@
     <title>Streaming Player</title>
     <script src="https://kit.fontawesome.com/068546a344.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="emoji.css">
+    <link rel="stylesheet" href="gridEmoji.css">
 </head>
 
 <body>
