added to javaScriptIntro.html

--- a/javaScriptIntro.html
+++ b/javaScriptIntro.html
@@ -1,16 +1,16 @@
-<! DOCTYPE html>
-    <html>
+<!DOCTYPE html>
+<html>
 
-    <head>
-        <title>Constr ucti ve &amp; Co.</title>
-        <link rel="stylesheet" href="css/cOl.css" />
-    </head>
+<head>
+    <title>Constructive &amp; Co.</title>
+    <link rel="stylesheet" href="css/cOl.css" />
+</head>
 
-    <body>
-        <hl>Constructive &amp; Co.</hl>
-        <p>For all orders and inquiries please call <em>555-3344</em></p>
-        = =
-        <script src="j s/ add-content .j s "></script>
-    </body>
+<body>
+    <hl>Constructive &amp; Co.</hl>
+    <script>document.write(' <h3>Welcome !</h3>');
+    </script>
+    <p>For all orders and inquiries please call <em>555-3344</em></p>
+</body>
 
-    </html>
+</html
